--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript">
-	var socket = io.connect('http://localhost:8080');
+	var socket = io.connect(window.location.hostname);
+	console.log(window.location.hostname);
 
 	var $messages = $('#messages');
 
