--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </body>
 
 
-<script type="text/javascript" src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
+<script type="text/javascript" src="https://code.jquery.com/jquery-1.8.3.min.js"></script>
 <script src="/socket.io/socket.io.js"></script>
 <script type="text/javascript">
 	var socket = io.connect(window.location.hostname);
